--- a/packages/sources/css/src/components/popover/src/index.css
+++ b/packages/sources/css/src/components/popover/src/index.css
@@ -35,7 +35,7 @@
 
 /* ALL POPOVER */
 .vtmn-popover > [role='tooltip'] {
-  z-index: 1000;
+  z-index: 1002;
   min-width: rem(250px);
   width: auto;
   box-shadow: var(--vtmn-shadow_200);
@@ -49,7 +49,6 @@
 }
 
 .vtmn-popover > [role='tooltip']::after {
-  z-index: 1000;
   border-radius: 0;
   content: ' ';
   height: 0;
