--- a/packages/sources/css/src/components/tooltip/src/index.css
+++ b/packages/sources/css/src/components/tooltip/src/index.css
@@ -7,6 +7,7 @@
 
 .vtmn-tooltip {
   position: relative;
+  z-index: 1001;
 }
 
 /* Applies to all tooltips */
@@ -25,7 +26,6 @@
 .vtmn-tooltip::before {
   content: '';
   border: rem(8px) solid transparent;
-  z-index: 1000;
 }
 
 .vtmn-tooltip::after {
@@ -39,7 +39,6 @@
   border-radius: rem(4px);
   background-color: var(--vtmn-semantic-color_background-primary-reversed);
   color: var(--vtmn-semantic-color_content-primary-reversed);
-  z-index: 1000;
 }
 
 .vtmn-tooltip:focus-visible {
